# news-scraper

./: .env  .gitignore  README.md  config.env  credentials.json  main.py  pyproject.toml  send_email.py
